Backport TCPIP instruction from SDL-Hyperion
This removes the facility support; for S370 the instruction is always
available in problem state: note that this is dangerous, as called out
in README.TCPIP. This fork of Spinhawk should only be used in controlled
environments where this risk is acceptable.

This builds on Unix-like systems; I do not know if the changes to
Makefile.am alone are enough to incorporate the new files into Windows
builds; I do not have a Windows development environment on which to test
and experiment.

--- a/Makefile.am
+++ b/Makefile.am
@@ -315,6 +315,8 @@ endif
   libherc_la_SOURCES = hconsole.c   \
                        w32util.c    \
                        strsignal.c  \
+                       tcpip.c      \
+                       x75.c        \
                        impl.c       \
                        config.c     \
                        bldcfg.c     \
@@ -578,6 +580,7 @@ EXTRA_DIST = autoconf/config.rpath \
              README.NETWORKING     \
              README.OSX            \
              README.TAPE           \
+             README.TCPIP          \
              README.HERCLOGO       \
              RELEASE.NOTES         \
              README.WIN32          \
@@ -656,6 +659,8 @@ noinst_HEADERS = hostinfo.h     \
                  commadpt.h     \
                  comm3705.h     \
                  tcpnje.h       \
+                 tcpip.h        \
+                 x75.h          \
                  cache.h        \
                  ecpsvm.h       \
                  memrchr.h      \
